--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Picture Hanging Calculator</title>
-    <meta name="description" content="Calculate precise measurements for hanging pictures and creating gallery walls" />
+    <title>Hang Time - Picture Hanging Calculator</title>
+    <meta name="description" content="Picture perfect picture placement. Calculate precise measurements for hanging pictures and creating gallery walls." />
   </head>
   <body>
     <div id="root"></div>
