Fix dark mode flash on initial page load
Apply theme class synchronously in HTML head before React renders
to prevent brief flash of light mode content.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <title>Hang Time - Picture Hanging Calculator</title>
   <meta name="description"
     content="Pixel Perfect Picture Placement. Calculate precise measurements for hanging pictures and creating gallery walls." />
+  <script>
+    (function() {
+      var theme = localStorage.getItem('picture-hanging-theme');
+      if (theme === 'dark' || (!theme && theme !== 'light')) {
+        document.documentElement.classList.add('dark');
+      }
+    })();
+  </script>
 </head>
 
 <body>
